[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/wc/CardFront.gd" type="Script" id=2]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=3]
[ext_resource path="res://assets/icons/rupee.png" type="Texture" id=5]
[ext_resource path="res://src/wc/cards/NameStyle.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=3]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Front" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1770.0
margin_bottom = -870.0
rect_min_size = Vector2( 200, 280 )
mouse_filter = 2
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -490.0
margin_bottom = -150.0
rect_min_size = Vector2( 200, 280 )
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_left = 2

[node name="CardText" type="VBoxContainer" parent="Margin"]
margin_left = 2.0
margin_right = 198.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 139 )
mouse_filter = 2
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Margin/CardText"]
margin_right = 196.0
margin_bottom = 30.0
rect_min_size = Vector2( 146, 19 )
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0.4, 0, 1 )
custom_styles/normal = ExtResource( 6 )
text = "Card Name"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="HBCost" type="HBoxContainer" parent="Margin/CardText"]
margin_top = 33.0
margin_right = 196.0
margin_bottom = 52.0

[node name="CostIcon" type="TextureRect" parent="Margin/CardText/HBCost"]
margin_right = 15.0
margin_bottom = 19.0
rect_min_size = Vector2( 15, 15 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Cost" type="Label" parent="Margin/CardText/HBCost"]
margin_left = 18.0
margin_right = 35.0
margin_bottom = 19.0
rect_min_size = Vector2( 15, 15 )
custom_colors/font_color = Color( 0.658824, 0.541176, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
valign = 1

[node name="HBTypeFaction" type="HBoxContainer" parent="Margin/CardText"]
margin_top = 55.0
margin_right = 196.0
margin_bottom = 85.0
custom_constants/separation = 0
alignment = 1

[node name="type_name" type="Label" parent="Margin/CardText/HBTypeFaction"]
margin_left = 24.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 13 )
size_flags_vertical = 1
text = "Type"
align = 1
valign = 1

[node name="separator" type="Label" parent="Margin/CardText/HBTypeFaction"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1
text = "-"
align = 1
uppercase = true

[node name="faction_name" type="Label" parent="Margin/CardText/HBTypeFaction"]
margin_left = 96.0
margin_right = 171.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 13 )
size_flags_vertical = 1
text = "aspect"
align = 1
valign = 1

[node name="text" type="RichTextLabel" parent="Margin/CardText"]
margin_top = 147.0
margin_right = 196.0
margin_bottom = 247.0
grow_vertical = 0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 14
bbcode_enabled = true
bbcode_text = "---"
text = "---"
scroll_active = false

[node name="Resources" type="Label" parent="Margin/CardText"]
margin_top = 250.0
margin_right = 196.0
margin_bottom = 280.0
text = "M"

[node name="Art" type="TextureRect" parent="."]
margin_right = 200.0
margin_bottom = 280.0
rect_min_size = Vector2( 200, 280 )
expand = true
